src/snapshots/afrotd__parser__tests__interpreation_html_7.3.6_15.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.XV
        </p>
    </div>
    <div class="message-body">
        <p>
            Der berechtigte Receiver A80 befindet sich in der Nähe einer
            Seitenlinie in der Luft, als er, in Richtung Spielfeld schauend,
            einen legalen Vorwärtspass erreicht. Als er in Richtung Spielfeld
            landet, (a) schleifen seine Zehen deutlich auf dem Boden inbounds,
            bevor er ins Aus fällt; (b) berühren in einer fortführenden
            Bewegung zuerst seine Zehen den Boden inbounds und danach kommen
            seine Fersen auf der Seitenlinie auf. Er behält den Ball in beiden
            Fälle fest in seinem Griff.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Vollständiger Pass. (b) Unvollständiger Pass. Die
                fortführende Zehen-Fersen Berührung ist Teil einer
                Einzelbewegung und gemäß der Interpretation ist er im Aus
                gelandet und hat somit das Fangen nicht vervollständigt.
            </p>
        </details>
    </div>
</article>
