src/snapshots/afrotd__parser__tests__interpreation_html_7.3.6_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Zwei gegnerische Spieler erreichen einen legalen Vorwärtspass,
            während sie springen und ein Spieler kehrt vor dem anderen auf den
            Boden innerhalb des Feldes zurück.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein gleichzeitiges Fangen. Der Pass ist vollständig oder
                abgefangen für den Spieler, der zuerst auf den Boden
                zurückkehrt (Regel 2.4.4).
            </p>
        </details>
    </div>
</article>
