src/snapshots/afrotd__parser__tests__interpreation_html_7.3.6_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            B33 springt, während er inbounds ist, und befindet sich in der
            Luft, als er Team A’s legalen Vorwärtspass erreicht. Er
            vervollständigt die Interception, indem er (a) im Spielfeld landet
            und dort getackelt wird oder (b) in Team B’s Endzone landet und
            dort getackelt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                B33 ist ein Ballträger, bis er den Ballbesitz verliert oder der
                Ball gemäß der Regel dead wird. (a) 1. und 10 für Team B. (b)
                Touchback (Regeln 4.1.3.c, 4.2.3.a, 5.1.1.e und 7.3.4).
            </p>
        </details>
    </div>
</article>
