src/snapshots/afrotd__parser__tests__interpreation_html_7.3.6_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.6.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            Der in der Luft befindliche Receiver A85 ergreift den Ball. Bei der
            Landung berührt er zuerst den Boden mit seinem linken Fuß, als er
            inbounds zu Boden fällt. Unmittelbar, nachdem A85 auf den Boden
            prallt, wird der Ball frei und berührt den Boden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Unvollständiger Pass. Ein in der Luft befindlicher Receiver
                muss die Kontrolle über den Ball behalten, wenn er zu Boden
                fällt, damit das Fangen vollständig ist.
            </p>
        </details>
    </div>
</article>
