src/snapshots/afrotd__parser__tests__interpreation_html_7.3.7_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.7.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Spieler berührt einen legalen Vorwärtspass, während er (a) eine
            Begrenzungslinie berührt; (b) sich in der Luft befindet, nachdem er
            zuvor im Aus war.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                In beiden Fällen ist der Ball im Aus, der Pass ist
                unvollständig und der Down zählt. Der Spieler verliert seine
                Berechtigung, wenn er ins Aus geht (Regeln 2.27.15, 4.2.3.a und
                7.3.3).
            </p>
        </details>
    </div>
</article>
