src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.I
        </p>
    </div>
    <div class="message-body">
        <p>
            B33, der sich jenseits der neutralen Zone mit seinem Rücken zum
            Ball befindet, winkt mit seinen Armen vor dem Gesicht des
            berechtigten Receivers A88 herum. Es kommt dabei zu keinem
            Körperkontakt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Foul. Es gibt kein Foul für eine Defense Passbehinderung,
                wenn es keinen Körperkontakt gibt.
            </p>
        </details>
    </div>
</article>
