src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.X
        </p>
    </div>
    <div class="message-body">
        <p>
            Bevor der Pass geworfen wird, laufen Wide Receiver A88 und Defender
            B1 Schulter an Schulter und Seite an Seite 15 Meter jenseits der
            neutralen Zone. A88 befindet sich dabei näher zur Seitenlinie und
            B1 näher zur Hash Mark. A88 biegt zur Spielfeldmitte ab. B1 bewegt
            sich nicht zur Seite und A88 prallt gegen ihn.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein Foul, denn der Pass wurde nicht geworfen.
            </p>
        </details>
    </div>
</article>
