src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_12.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.XII
        </p>
    </div>
    <div class="message-body">
        <p>
            A44, ein Slot Back, läuft 25 Meter downfield eine Pass-Route in
            Richtung eines Goalline-Pylons. B1, ein Safety, befindet sich
            zwischen A44 und dem Pylon, als der Ball geworfen wird. B1
            verringert augenscheinlich seine Geschwindigkeit und prallt mit A44
            zusammen, bevor der fangbare Ball den Boden berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B-Foul. Defense Passbehinderung. Strafe – 15-Meter vom
                Previous Spot und First Down (Regel 7.3.8.c).
            </p>
        </details>
    </div>
</article>
