src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_13.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.XIII
        </p>
    </div>
    <div class="message-body">
        <p>
            A80, ein Tight End, bewegt sich bei einer Pass-Route quer durch die
            Defense Formation und berührt 25 Meter tief im Defense Backfield
            B1, einen Safety, bevor oder nachdem der Ball geworfen wurde. A88,
            ein Wide Receiver, der auf der gegenüberliegenden Seite von A80
            beim Snap stand, läuft an A80 und B1 vorbei und fängt hinter ihnen
            den legalen Vorwärtspass.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A-Foul. Offense Passbehinderung. Strafe – 15 Meter vom
                Previous Spot.
            </p>
        </details>
    </div>
</article>
