src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_14.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.XIV
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und Goal von der B-5. Team A’s legaler Vorwärtspass ist
            unvollständig, aber Team B beging an der B-1 oder in seiner Endzone
            eine Passbehinderung.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                First Down und Goal für Team A an B-2.
            </p>
        </details>
    </div>
</article>
