src/snapshots/afrotd__parser__tests__interpreation_html_7.3.8_16.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.8.XVI
        </p>
    </div>
    <div class="message-body">
        <p>
            A80 und B60 versuchen jenseits der neutralen Zone einen
            Vorwärtspass zu fangen, der in Richtung von A80 geworfen wurde.
            A14, der nicht versucht, den Pass zu fangen, blockt B65 jenseits
            der neutralen Zone, entweder bevor der Pass geworfen wurde oder
            während der nicht fangbare Pass in der Luft ist.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A-Foul. Offense Passbehinderung. Strafe – 15 Meter vom
                Previous Spot.
            </p>
        </details>
    </div>
</article>
